.provarCaches/00D5f000005vwGkEAI/objects/rstkf__glbankstmth__c.object
<CustomObject>
    <description>glbankstmth__c</description>
    <fields>
        <fullName>rstkf__altextid__c</fullName>
        <description>altextid</description>
        <externalId>true</externalId>
        <label>altextid</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <description>External Id</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__glbankstmth_glbankacct__c&amp;&apos;&apos;&amp;rstkf__glbankstmth_key__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__glbankstmth_key__c &amp; &apos;-&apos; &amp; TEXT(rstkf__glbankstmth_stmtdate__c)  &amp; &apos;-&apos;&amp; TEXT(rstkf__glbankstmth_status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmth_addedtxnvalue__c</fullName>
        <description>Transaction Value Added On Statement</description>
        <inlineHelpText>The value (in bank account currency) of all new system transactions added in the Bank Statement Reconciliation program.</inlineHelpText>
        <label>Transaction Value Added On Stmt</label>
        <summarizedField>rstkf__glbankstmtd__c.rstkf__glbankstmtd_addedtxnvalue__c</summarizedField>
        <summaryForeignKey>rstkf__glbankstmtd__c.rstkf__glbankstmtd_glbankstmth__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmth_calcendglbank__c</fullName>
        <description>Ending GL Balance Bank</description>
        <formula>rstkf__glbankstmth_openingbal__c  +  rstkf__glbankstmth_netchgbank__c + rstkf__glbankstmth_recontxnvalue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the ending GL balance for the bank account in the bank account currency, calculated as Opening Balance plus &amp; minus the system bank transactions (in bank account currency) between Date of Last Statement and Statement Date.</inlineHelpText>
        <label>Book Balance in Bank Curr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmth_calcendglhome__c</fullName>
        <description>Deposits Cleared On This Statement</description>
        <formula>rstkf__glbankstmth_yrstartglhome__c  +  rstkf__glbankstmth_netchghome__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the ending GL balance for the bank account in the company’s functional (home) currency, calculated as the prior month’s ending GL balance for the corresponding cash account plus &amp; minus GL transactions between then and Statement Date.</inlineHelpText>
        <label>Ending GL Balance Home</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmth_clrddephere__c</fullName>
        <description>Deposits Cleared On This Statement</description>
        <inlineHelpText>This is the sum (in bank account currency) of the system (i.e., Rootstock-generated) bank deposit transactions that have so far been reconciled on this statement.</inlineHelpText>
        <label>Deposits Cleared On This Statement</label>
        <summarizedField>rstkf__glbankstmtd__c.rstkf__glbankstmtd_clrddephere__c</summarizedField>
        <summaryForeignKey>rstkf__glbankstmtd__c.rstkf__glbankstmtd_glbankstmth__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmth_clrdpayhere__c</fullName>
        <description>Payments Cleared On This Statement</description>
        <inlineHelpText>This is the sum (in bank account currency) of the system (i.e., Rootstock-generated) Accounts Payable payment transactions that have so far been reconciled on this statement.</inlineHelpText>
        <label>Payments Cleared On This Statement</label>
        <summarizedField>rstkf__glbankstmtd__c.rstkf__glbankstmtd_clrdpayhere__c</summarizedField>
        <summaryForeignKey>rstkf__glbankstmtd__c.rstkf__glbankstmtd_glbankstmth__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmth_clrdxferthere__c</fullName>
        <description>Transfers Cleared On This Statement</description>
        <inlineHelpText>This is the sum (in bank account currency) of the system (i.e., Rootstock-generated) Journal Entry cash transfer or adjustment transactions that have so far been reconciled on this statement.</inlineHelpText>
        <label>Transfers Cleared On This Statement</label>
        <summarizedField>rstkf__glbankstmtd__c.rstkf__glbankstmtd_clrdxferthere__c</summarizedField>
        <summaryForeignKey>rstkf__glbankstmtd__c.rstkf__glbankstmtd_glbankstmth__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmth_currenttxns__c</fullName>
        <description>Current Transactions</description>
        <formula>rstkf__glbankstmth_endingbal__c -  rstkf__glbankstmth_openingbal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the value (in bank account currency) that we must either reconcile to existing system transactions or add as new system transactions. It is set to Ending Balance minus Opening Balance.</inlineHelpText>
        <label>Current Transactions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmth_endingbal__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Ending Balance</description>
        <inlineHelpText>This is the ending statement balance in bank account currency, as reported by the bank.</inlineHelpText>
        <label>Ending Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmth_finalized__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the user has declared the statement completely entered. GL postings created during statement reconciliation have been posted.</inlineHelpText>
        <label>Finalized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmth_firstxactdate__c</fullName>
        <description>First Transaction Date</description>
        <inlineHelpText>The earliest Date per Bank in the set of Bank Statement Lines for the statement.</inlineHelpText>
        <label>First Transaction Date</label>
        <summarizedField>rstkf__glbankstmtd__c.rstkf__glbankstmtd_bankdate__c</summarizedField>
        <summaryForeignKey>rstkf__glbankstmtd__c.rstkf__glbankstmtd_glbankstmth__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmth_fromdate__c</fullName>
        <description>From date</description>
        <formula>IF( ISBLANK(rstkf__glbankstmth_laststmtdate__c),rstkf__glbankstmth_firstxactdate__c, rstkf__glbankstmth_laststmtdate__c+1)</formula>
        <inlineHelpText>The day following Date of Last Statement. No Date per Bank in the set of Bank Statement Lines for the statement can be earlier than From date.</inlineHelpText>
        <label>From date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmth_glbankacct__c</fullName>
        <description>Bank Account</description>
        <inlineHelpText>This is the bank account that is being reconciled.</inlineHelpText>
        <label>Bank Account</label>
        <referenceTo>rstkf__glbankacct__c</referenceTo>
        <relationshipLabel>Statement Header</relationshipLabel>
        <relationshipName>glbankstmths</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmth_key__c</fullName>
        <description>Statement Key</description>
        <inlineHelpText>This field uniquely identifies a single bank statement.</inlineHelpText>
        <label>Statement Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmth_laststatement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Last Statement ID</description>
        <inlineHelpText>A link to the last bank statement for Bank Account before this one.</inlineHelpText>
        <label>Last Statement ID</label>
        <referenceTo>rstkf__glbankstmth__c</referenceTo>
        <relationshipLabel>Statement Header</relationshipLabel>
        <relationshipName>Statement_Header</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmth_laststmtdate__c</fullName>
        <description>Date of Last Statement</description>
        <inlineHelpText>The date of the last bank statement before this one.</inlineHelpText>
        <label>Date of Last Statement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmth_lasttxndate__c</fullName>
        <description>Calculated Statement Date</description>
        <inlineHelpText>This is the latest Bank Transaction Date from the set of statement transactions</inlineHelpText>
        <label>Calculated Statement Date</label>
        <summarizedField>rstkf__glbankstmtd__c.rstkf__glbankstmtd_bankdate__c</summarizedField>
        <summaryForeignKey>rstkf__glbankstmtd__c.rstkf__glbankstmtd_glbankstmth__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmth_netchgbank__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Net Change Post-last Stmt Bank</description>
        <inlineHelpText>The total net value of system bank transactions in bank account currency between Date of Last Statement and Statement Date.</inlineHelpText>
        <label>Net Change Post-last Stmt Bank</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmth_netchghome__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Net Change This Year Home</description>
        <inlineHelpText>The total net value of GL transactions in the company’s functional (home) currency for the corresponding cash account in the current fiscal year, up to and including Statement Date.</inlineHelpText>
        <label>Net Change This Year Home</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmth_openingbal__c</fullName>
        <description>Opening Balance</description>
        <formula>IF( ISBLANK(rstkf__glbankstmth_laststatement__c),0,  rstkf__glbankstmth_laststatement__r.rstkf__glbankstmth_endingbal__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Ending Balance of the last bank statement for Bank Account before this one.</inlineHelpText>
        <label>Opening Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmth_origin__c</fullName>
        <description>Origin</description>
        <inlineHelpText>Either Download, meaning that the statement was downloaded from BRATO, or Manually Entered, meaning that the statement was typed-in in the Bank Statement Reconciliation program.</inlineHelpText>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Download</fullName>
                </value>
                <value>
                    <fullName>Manual Entry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmth_reconciledhere__c</fullName>
        <description>Reconciled Here</description>
        <formula>rstkf__glbankstmth_clrddephere__c  +  rstkf__glbankstmth_clrdpayhere__c + rstkf__glbankstmth_clrdxferthere__c + rstkf__glbankstmth_addedtxnvalue__c + rstkf__glbankstmth_variance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The sum of Deposits Cleared On This Statement, Payments Cleared On This Statement, and Payments Cleared On This Statement. System transactions added in the Bank Statement Reconciliation program, though technically reconciled, are not included in this sum.</inlineHelpText>
        <label>Reconciled Here</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmth_recontxnvalue__c</fullName>
        <description>Transaction Value Added On Statement</description>
        <inlineHelpText>The value (in bank account currency) of all previously existing system transactions reconciled in the Bank Statement Reconciliation program.</inlineHelpText>
        <label>Transaction Value Reconciled On Stmt</label>
        <summarizedField>rstkf__glbankstmtd__c.rstkf__glbankstmtd_recontxnvalue__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__glbankstmtd__c.rstkf__glbankstmtd_addedinrecon__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__glbankstmtd__c.rstkf__glbankstmtd_glbankstmth__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmth_status__c</fullName>
        <description>Status</description>
        <inlineHelpText>One of five values:

Loaded: Transactions have been loaded into GLBANKSTMTD from BRATO but nothing is reconciled yet.


In Progress: For downloaded statements, reconciliation has started but is not complete. For manually entered statements,the header</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Loaded</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Reconciled</fullName>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
                <value>
                    <fullName>Reversed</fullName>
                </value>
                <value>
                    <fullName>Posted with Errors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmth_stmtdate__c</fullName>
        <description>Statement Date</description>
        <inlineHelpText>The date of this bank statement. No Bank Statement Lines dated after Statement Date will be accepted.</inlineHelpText>
        <label>Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmth_unclrddepbeg__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Uncleared Deposits at Start</description>
        <inlineHelpText>This is the sum (in bank account currency) of the system (i.e., Rootstock-generated) bank deposit transactions that are not yet reconciled at the start of the Bank Statement Reconciliation process.</inlineHelpText>
        <label>Uncleared Deposits at Start</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmth_unclrddeptot__c</fullName>
        <description>Uncleared Deposits</description>
        <formula>rstkf__glbankstmth_unclrddepbeg__c  -  rstkf__glbankstmth_clrddephere__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Uncleared Deposits at Start minus Deposits Cleared On This Statement.</inlineHelpText>
        <label>Uncleared Deposits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmth_unclrdpaybeg__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Uncleared Payments at Start</description>
        <inlineHelpText>This is the sum (in bank account currency) of the system (i.e., Rootstock-generated) AP payment transactions that are not yet reconciled at the start of the Bank Statement Reconciliation process.</inlineHelpText>
        <label>Uncleared Payments at Start</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmth_unclrdpaytot__c</fullName>
        <description>Uncleared Payments</description>
        <formula>rstkf__glbankstmth_unclrdpaybeg__c  -  rstkf__glbankstmth_clrdpayhere__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Uncleared Payments at Start minus Payments Cleared On This Statement.</inlineHelpText>
        <label>Uncleared Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmth_unclrdxferbeg__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Uncleared Transfers at Start</description>
        <inlineHelpText>This is the sum (in bank account currency) of the system (i.e., Rootstock-generated) Journal Entry cash transfer or adjustment transactions that are not yet reconciled at the start of the Bank Statement Reconciliation process.</inlineHelpText>
        <label>Uncleared Transfers at Start</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmth_unclrdxfertot__c</fullName>
        <description>Uncleared Transfers</description>
        <formula>rstkf__glbankstmth_unclrdxferbeg__c  -  rstkf__glbankstmth_clrdxferthere__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Uncleared Transfers at Start minus Transfers Cleared On This Statement.</inlineHelpText>
        <label>Uncleared Transfers</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmth_unreconciledhere__c</fullName>
        <formula>rstkf__glbankstmth_currenttxns__c  -  rstkf__glbankstmth_reconciledhere__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the value (in bank account currency) of the system transactions we have not yet reconciled but should expect to reconcile before we finish. It is set to Current Transactions minus Reconciled Here.</inlineHelpText>
        <label>Current and Unreconciled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmth_variance__c</fullName>
        <inlineHelpText>Sum of variances under the statement</inlineHelpText>
        <label>Variance</label>
        <summarizedField>rstkf__glbankstmtd__c.rstkf__glbankstmtd_variancecopy__c</summarizedField>
        <summaryForeignKey>rstkf__glbankstmtd__c.rstkf__glbankstmtd_glbankstmth__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmth_yrstartglhome__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Year Start GL Home</description>
        <inlineHelpText>The GL balance in the company’s functional (home) currency for the corresponding cash account at the start of the current fiscal year.</inlineHelpText>
        <label>Year Start GL Home</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <description>Triggeroptions</description>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Statement Header</label>
    <listViews>
        <fullName>rstkf__All</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glbankstmth_calcendglbank__c</columns>
        <columns>rstkf__glbankstmth_currenttxns__c</columns>
        <columns>rstkf__glbankstmth_calcendglhome__c</columns>
        <columns>rstkf__glbankstmth_endingbal__c</columns>
        <columns>rstkf__glbankstmth_laststmtdate__c</columns>
        <columns>rstkf__glbankstmth_firstxactdate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>glbankstmth Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Statement Header</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstkf__glbankstmth_stmtdate_validation</fullName>
        <active>true</active>
        <description>Statement Date should be greater than or equal to From Date</description>
        <errorConditionFormula>rstkf__glbankstmth_stmtdate__c &lt; rstkf__glbankstmth_fromdate__c</errorConditionFormula>
        <errorMessage>Statement Date should be greater than or equal to From Date</errorMessage>
    </validationRules>
</CustomObject>